# sts-sim

./: .gitattributes  .gitignore  AGENTS.md  API_TRACKER.md  COMMAND_API.md  Cargo.toml  ENGINE_STATUS.md  PROJECT_STATUS.md  README.md  README.zh-CN.md  build.rs  coverage.json  live_comm_debug.txt  live_comm_raw.jsonl  log6.txt  ol-live.cmd  ol.cmd  pyproject.toml  tmp.rs  tmp_check_move.rs  tmp_combat.json  tmp_f13.json
.cargo/: config.toml
crates/oracle_lab_client/: Cargo.toml
crates/oracle_lab_client/src/: main.rs
crates/sts_simulator_control/: Cargo.toml  build.rs
crates/sts_simulator_control/src/: ai.rs  lib.rs  runtime.rs
crates/sts_simulator_control/tests/: noncombat_strategy_contract.rs  oracle_analysis_service_contract.rs  oracle_analysis_session_contract.rs  strategic_encounter_probe_contract.rs
data/: SCHEMA_REFERENCE.md  act_1_exo.txt  act_2_city.txt  act_3_beyond.txt  cards.json  effect_types.json  events_final_master.json  events_logic.json  events_master.json  global.txt  json_schema_reference.json  keywords.json  monsters_merged.json  monsters_verified.json  monsters_with_behavior.json  potions.json  powers.json  powers_spec.json  relics.json  relics_patched.json
docs/: AI_COMBAT_KERNEL_CONTRACT.md  AI_COMBAT_KERNEL_IMPLEMENTATION_PLAN.md  AI_COMBAT_RUST_MIGRATION_LEDGER.md  AI_COMBAT_SOURCE_COVERAGE_LEDGER.md  AI_COMBAT_STATE_SCHEMA.md  AI_COMBAT_STATE_V0_SCHEMA.md  AI_DIRECTION.md  ARCHITECTURE.md  ARTIFACTS.md  AUTOPILOT_BOUNDARY.md  BUGFIX_WORKFLOW.md  CAMPAIGN_ARTIFACT_ARCHITECTURE.md  CAMPAIGN_CLI_CONTRACT.md  CAMPAIGN_JOURNAL.md  CAMPAIGN_MIGRATION_PLAN.md  CAMPAIGN_SYSTEM_ARCHITECTURE.md  CAMPAIGN_WORKSPACE_V2.md  CAMPAIGN_WRAPPER_AUDIT.md  CAMPAIGN_WRAPPER_USAGE.md  CODEX_CLI_RESUME.md  COMBAT_STATE_REFACTOR.md  COMM_PROTOCOL_DEBT_BACKLOG_2026-04-12.md  COMM_PROTOCOL_EXPANSION_AUDIT_2026-04-12.md  CURRENT_DIRECTION.md  GUARDIAN_THRESHOLD_TEST_MATRIX.md  JAVA_MECHANICS_DEBUG_HANDOFF.md  JAVA_SOURCE_MAP.md  KNOWN_LIMITS.md  LAYER_BOUNDARIES.md  LEARNING_TRUTH_SOURCES.md  LIVE_COMM_MANUAL_SCENARIO_RUNBOOK.md  LIVE_COMM_MODES.md  LIVE_COMM_PARITY_WORKFLOW.md  LIVE_COMM_RUNBOOK.md  MANUAL_SCENARIO_SAMPLE_INDEX.md  MECHANICS_AUDIT_LEDGER.md  MINIMAL_COMBAT_LOCAL_RL_EXPERIMENT.md  NEW_AI_ARCHITECTURE.md  NEXT_AI_HANDOFF.md  PHASE_0_EXIT.md  (+15 more)
reference/: README.md
scripts/: analyze_relics.py  check_coverage.py  check_relics.py  compare_events.py  convert_potions.py  debug_play.py  dedup_cards.py  event_name_mapping.py  fix_ascension_markers.py  fix_deprecated_params.py  generate_correction_tasks.py  java_lookup.py  list_conditions.py  organize_project.py  patch_potions.py  patch_relics.py  play_ui.py  power_coverage.py  preprocess_events.py  scrape_wiki_events.py  self_improve.py  smoke_test.py  split_cards.py  test_hand.py  train_expert.py  train_expert_v2.py  train_ppo.py  validate_cards.py  verify_relics.py
src/: action.rs  combat.rs  game.rs  interaction_coverage.rs  interop.rs  lib.rs  main.rs  main.rs.bak  rng.rs  verification.rs
static/: interactive_combat.html
tests/: action_handler_alignment.rs  analyze_log.py  analyze_turns.py  architecture_runtime_boundaries.rs  audit_json.py  audit_json_vs_java.py  battle_counter_relic_regressions.rs  bronze_automaton_spawn_regressions.rs  card_reward_value_loop.rs  check_cards.py  check_moves.py  check_steps.py  combat_case_driver.rs  combat_decision_audit_cli.rs  combat_env_observation_contract.rs  combat_value_frontier.rs  cultist_starter_micro_world.rs  decision_env_contract.rs  diff_driver.rs  emotion_chip_regressions.rs  exact_turn_solver_regressions.rs  extract_all.py  extract_flight.py  extract_from_java.py  extract_ids.py  extract_moves.py  extract_v3.py  fetch_issues.py  fetch_pulls.py  fixture_parse_test.rs  full_turn_verify_test.rs  gen_final_json.py  gen_json.py  gen_verified_json.py  guardian_threshold_behavior.rs  heal_relic_regressions.rs  java_extraction.json  java_full_extraction.json  layer_boundaries.rs  live_comm_act1_regressions.rs  (+32 more)
tools/: README.md  TOOLS_AUDIT.md  analyze_imitation_disagreements.py  audit_defect_card_source.py  audit_silent_card_upgrade_reads.py  build_rl_dataset_manifest.py  campaign.ps1  campaign_artifact_io.ps1  campaign_artifact_legacy.ps1  campaign_artifact_paths.ps1  campaign_artifact_pointers.ps1  campaign_artifact_prune.ps1  campaign_artifact_refs.ps1  campaign_artifact_source.ps1  campaign_artifact_summary.ps1  campaign_artifacts.ps1  campaign_build.ps1  campaign_continuation.ps1  campaign_coverage_gap_execution.ps1  campaign_coverage_gap_manifest.ps1  campaign_coverage_gaps.ps1  campaign_entry_dispatch.ps1  campaign_inspect.ps1  campaign_invocation.ps1  campaign_manifest.ps1  campaign_milestones.ps1  campaign_preflight.ps1  campaign_request.ps1  campaign_rounds.ps1  campaign_run_execution.ps1  campaign_source.ps1  campaign_targets.ps1  (+19 more)
(+3213 files in other folders)
