[package]
name = "sts_simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
smallvec = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
