[package]
name = "sts_simulator"
version = "0.1.0"
edition = "2021"
description = "Unofficial Rust Slay the Spire simulator and AI-search workspace"
readme = "README.md"
repository = "https://github.com/hewzhew/sts-sim"

[dependencies]
blake2 = "0.10"
smallvec = { version = "1.11", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
