[package]
name = "sts_simulator"
version = "0.1.0"
edition = "2021"
autotests = false
autobins = false
description = "Unofficial Rust Slay the Spire simulator and AI-search workspace"
readme = "README.md"
repository = "https://github.com/hewzhew/sts-sim"

[workspace]
members = [
    ".",
    "crates/oracle_lab_client",
    "crates/oracle_lab_protocol",
    "crates/sts_combat_planner",
    "crates/sts_simulator_control",
    "tools/architecture_checks",
]
default-members = ["."]
resolver = "2"

[dependencies]
blake2 = "0.10"
flate2 = "1.0"
smallvec = { version = "1.11", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.test]
debug = 0

[profile.fast-run]
inherits = "release"
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "off"
incremental = true
codegen-units = 64
panic = "abort"

[profile.release-final]
inherits = "release"
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "thin"
incremental = false
codegen-units = 1
panic = "abort"

[profile.dev-opt]
inherits = "dev"
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256
